systemd-genie (1.43) buster bullseye bookworm sid focal bionic; urgency=medium

        * Based on collated systemd-analyze results, re-upped systemd startup
          timeout to 240.
        * Added automated creation of resolv.conf symlink.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 08 Jun 2021 05:40:00 -0500

systemd-genie (1.42) buster bullseye bookworm sid focal bionic; urgency=medium

        * Regression fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 13 May 2021 05:40:00 -0500

systemd-genie (1.41) buster bullseye bookworm sid focal bionic; urgency=medium

        * Moved user-runtime-dir@.service override to ExecStartPost.
        * Fix virtualization detection for non-custom kernels.
        * Detect slow-start as different from failed-start.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 06 May 2021 23:40:00 -0500

systemd-genie (1.40) buster bullseye bookworm sid focal bionic; urgency=medium

        * Moved generic Linux/WSL functionality into shared assembly.
        * Upnumbered genie-envar to fix missing path cloning on some systems.
        * Fixed typo in wslg-xwayland.socket.
        * Map XWayland socket only where WSLg is present and active.
        * Mount user runtime directory only where +WSLg and user matches.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 27 Apr 2021 15:00:00 -0500

systemd-genie (1.39) buster bullseye bookworm sid focal bionic; urgency=medium

        * Better WSLg support, based on the code of Daniel Llewellyn
          (@diddledan), here:
          https://github.com/diddledan/one-script-wsl2-systemd.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 18:00:00 -0500

systemd-genie (1.38) buster bullseye bookworm sid focal bionic; urgency=medium

        * Restored original default systemd startup timeout.
        * Changes to support WSLg.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 22 Apr 2021 14:32:00 -0500
