@@ -11,6 +11,7 @@ BINDIR = $(DESTDIR)/usr/bin
 ETCDIR = $(DESTDIR)/etc
 SVCDIR = $(DESTDIR)/lib/systemd/system
 USRLIBDIR = $(DESTDIR)/usr/lib
+LIBDIR = $(DESTDIR)/lib
 
 #
 # Default target: package.
@@ -52,6 +53,9 @@ package-inner:
 
 	# tmpfiles.d
 	install -Dm 0644 -o root "othersrc/usr-lib/tmpfiles.d/genie-stub-resolv.conf" -t "$(USRLIBDIR)/tmpfiles.d"
+
+	# binfmt.d
+	install -Dm 0644 -o root "othersrc/usr-lib/binfmt.d/WSLInterop.conf" -t "$(LIBDIR)/binfmt.d"
 
 clean:
 	debuild -- clean
